# polycule

./: .gitignore  BUILD.md  CHANGELOG.md  HANDOVER-v3-FINAL.md  README.md  STATE.md  polycule.example.toml  polycule.toml.example  pyproject.toml  spec.md  test_client.py
docs/: FILES_INVENTORY.md
src/: config.py  config_loader.py  first_run.py  hermes_sessions.py  managed_agents.py  polycule_cli.py  runtime_state.py  session_backends.py  session_init.py  tmux_controller.py
src/agents/: base_adapter.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py  hermes_adapter.py  opencode_adapter.py  shell_adapter.py
src/backend/: db.py  hub.py
src/ui/: chat_tui.py
tests/: test_adapter_trigger_policy.py  test_agent_resume_adapters.py  test_base_adapter_reconnect.py  test_chat_tui_commands.py  test_chat_tui_reconnect.py  test_config_loader.py  test_hermes_adapter_sessions.py  test_hub_agent_status.py  test_hub_directives.py  test_hub_idle_timeout.py  test_managed_agents.py  test_message_guard.py  test_runtime_state.py  test_session_backends.py
