# Polycule · MIT
[project]
name = "polycule"
version = "0.1.0"
description = "Local multi-agent collaboration hub with IRC-style TUI"
requires-python = ">=3.11"
dependencies = [
    "urwid>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
polycule = "polycule_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/**/*.py"]
sources = ["src"]

[tool.uv.sources]
# Local deps can be pinned here if needed

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
